objects/Relationship_Parties__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Party</label>
        <referenceTo>Agreement_Party__c</referenceTo>
        <relationshipName>Margin_Ratchet_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility Party</label>
        <referenceTo>Facility_Party__c</referenceTo>
        <relationshipName>Margin_Ratchet_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Margin_Ratchet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Margin Ratchet</label>
        <referenceTo>Margin_Ratchet__c</referenceTo>
        <relationshipName>Margin_Ratchet_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tranche_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tranche Party</label>
        <referenceTo>Tranche_Party__c</referenceTo>
        <relationshipName>Margin_Ratchet_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Relationship Party</label>
    <nameField>
        <displayFormat>RP - {0000000}</displayFormat>
        <label>Relationship Parties Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>